# cli_calendar

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: tests.yml
coverage/: coverage.json
src/: ArgParser.py  CliCalendar.py  TaskRepository.py  base_calendar.txt  cli_calendar.py  constants.py  main.py
tests/: test_arg_parser.py  test_cli_calendar_init.py  test_handle_args.py  test_main_entry.py  test_move_input.py  test_smoke.py  test_task_repository.py
